# pdf-summarize

./: README.md  pyproject.toml  summarize.py  test_summarize.py
